--- a/src/app/video-details/video-details.component.html
+++ b/src/app/video-details/video-details.component.html
@@ -1,1 +1,9 @@
-<p>video-details works!</p>
+<div class="col-md-3">
+    <div class="card my-2">
+        <img [src]="video.imageUrl" alt="" class="card-img-top">
+        <div class="card-body">
+            <h5>{{video.title}}</h5>
+            <p>{{video.description}}</p>
+        </div>
+    </div>
+</div>
