--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,6 +1,7 @@
 <div class="row align-self-start">
     <div class="col">
-        <button type="button" class="btn btn-outline-primary py-1 px-2">
+        <button type="button" class="btn btn-outline-primary py-1 px-2"
+        (click)="openFormModal()">
             <svg class="bi bi-plus" width="1.5em" height="1.5em" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M10 5.5a.5.5 0 01.5.5v4a.5.5 0 01-.5.5H6a.5.5 0 010-1h3.5V6a.5.5 0 01.5-.5z" clip-rule="evenodd"></path>
                 <path fill-rule="evenodd" d="M9.5 10a.5.5 0 01.5-.5h4a.5.5 0 010 1h-3.5V14a.5.5 0 01-1 0v-4z" clip-rule="evenodd"></path>
@@ -21,3 +22,6 @@
         </div>
     </div>
 </div>
+
+
+<!-- <app-video-uploader [modalId]="'addVideoModal'"></app-video-uploader> -->
