--- a/src/app/video-uploader/video-uploader.component.html
+++ b/src/app/video-uploader/video-uploader.component.html
@@ -8,11 +8,29 @@
     </svg>
   </button>
 </div>
-<div class="modal-body">
-  <p>My modal content</p>
-</div>
-<div class="modal-footer">
-  <button (click)="activeModal.dismiss('Close clicked')">
-    Close Clicked
-  </button>
-</div>
+<form [formGroup]="myForm" (ngSubmit)="submitForm()">
+  <div class="modal-body">
+    <div class="container">
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" 
+            class="form-control"
+            formControlName="username" />
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control"
+          formControlName="password"/>
+        </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-success"
+        [disabled]="!myForm.valid">
+        Submit Form
+      </button>
+    <button (click)="activeModal.dismiss('Close clicked')">
+      Close Clicked
+    </button>
+  </div>
+</form>
