add sign up component

--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -29,7 +29,7 @@
         </mat-card-content>
         <mat-card-actions>
           <button mat-raised-button color="primary" type="submit">Log In</button>
-          <a mat-button href="">sign up</a>
+          <button mat-button (click)="goSignUp()">Sign Up</button>
         </mat-card-actions>
       </mat-card>
     </form>
