--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<nav-header *ngIf="isAuthenticated"></nav-header>
+<div class="background">
+    <router-outlet></router-outlet>
+</div>
