add router function to navbar

--- a/src/app/core/nav-header/nav-header.component.css
+++ b/src/app/core/nav-header/nav-header.component.css
@@ -12,6 +12,7 @@
   padding: 14px 20px;
   text-decoration: none;
   text-align: center;
+  cursor: pointer;
 }
 
 .nav-bar a:hover {
@@ -20,6 +21,6 @@
 }
 
 .active {
-    background-color: #ddd;
+    background-color: rgb(163, 136, 136);
     color: black;
 }
