--- a/src/app/core/nav-header/nav-header.component.html
+++ b/src/app/core/nav-header/nav-header.component.html
@@ -1,6 +1,6 @@
 <div class="nav-bar">
-    <a href="#">Home</a>
-    <a href="#">Videos</a>
+    <a routerLink="/home" routerLinkActive="active">Home</a>
+    <a routerLink="/videos" routerLinkActive="active">Videos</a>
     <a href="#">Images</a>
     <a href="#">Tools</a>
     <span class="nav-spacer"></span>
