--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,12 @@
 .background {
   background-color: aquamarine;
   width: auto;
-  height: 95%;
+  height: 100%;
+  padding: 1px;
+}
+
+.container {
+  width: 98%;
+  margin-left: auto;
+  margin-right: auto;
 }
