change css to scss

--- a/src/app/core/nav-header/nav-header.component.html
+++ b/src/app/core/nav-header/nav-header.component.html
@@ -1,8 +1,3 @@
-<div class="nav-bar">
-    <a routerLink="/home" routerLinkActive="active">Home</a>
-    <a routerLink="/videos" routerLinkActive="active">Videos</a>
-    <a href="#">Images</a>
-    <a href="#">Tools</a>
-    <span class="nav-spacer"></span>
-    <a href="#">Profile</a>
-</div>
+<mat-toolbar color='accent'>
+    <span>My Application</span>
+</mat-toolbar>
