--- a/src/app/core/nav-header/nav-header.component.html
+++ b/src/app/core/nav-header/nav-header.component.html
@@ -1,3 +1,7 @@
-<mat-toolbar color='accent'>
-    <span>My Application</span>
+<mat-toolbar color='accent' color="primary">
+    <span class="nav-logo"><img src="assets/images/logo.png"></span>
+    <span class="nav-search">
+        <input matInput placeholder="search...">
+        <button mat-raised-button>Search</button>
+    </span>
 </mat-toolbar>
