--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,44 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+@import 'app/core/nav-header/nav-header.component.scss';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$multimedia-manager-frontend-primary: mat-palette($mat-deep-purple, 300);
+$multimedia-manager-frontend-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$multimedia-manager-frontend-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$multimedia-manager-frontend-theme: mat-light-theme((
+  color: (
+    primary: $multimedia-manager-frontend-primary,
+    accent: $multimedia-manager-frontend-accent,
+    warn: $multimedia-manager-frontend-warn,
+  )
+));
+
+@mixin multimedia-manager-frontend-theme($theme) {
+  @include button-theme($theme);
+}
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($multimedia-manager-frontend-theme);
+@include multimedia-manager-frontend-theme($multimedia-manager-frontend-theme);
+
 /* You can add global styles to this file, and also import other style files */
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
