optimize navigation header

--- a/src/app/core/nav-header/nav-header.component.html
+++ b/src/app/core/nav-header/nav-header.component.html
@@ -1,7 +1,23 @@
 <mat-toolbar color='accent' color="primary">
     <span class="nav-logo"><img src="assets/images/logo.png"></span>
+    <span class="spacer-1"></span>
     <span class="nav-search">
         <input matInput placeholder="search...">
         <button mat-raised-button>Search</button>
+    </span>
+    <span class="spacer-2"></span>
+    <span>
+        <nav class="nav-block">
+            <ul>
+                <li class="nav-item selected">Dashboard</li>
+                <li class="nav-item">Videos</li>
+                <li class="nav-item">Images</li>
+                <li class="nav-item">Books</li>
+            </ul>
+        </nav>
+    </span>
+    <span class="spacer-1"></span>
+    <span>
+        <img class="avatar" src="assets/images/default_avatar.png">
     </span>
 </mat-toolbar>
