--- a/src/app/core/nav-header/nav-header.component.scss
+++ b/src/app/core/nav-header/nav-header.component.scss
@@ -8,17 +8,19 @@
         height: 30%;
         position: relative;
         float: left;
-        left: 40px;
+        left: 80px;
     }
 
     .nav-search {
-        margin-left: 45px;
+        width: auto;
     }
 
     .nav-search input {
         height: 35px;
+        width: 100%;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
+        outline: none;
     }
 
     .nav-search button {
@@ -27,6 +29,48 @@
         border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
         height: 40px;
-        background-color: mat-color($multimedia-manager-frontend-primary,400);
+        // background-color: mat-color($multimedia-manager-frontend-primary,400);
+        background-color: #3898ec;
+    }
+
+    .nav-block {
+        width: auto;
+    }
+
+    .nav-block ul {
+        list-style-type: none;
+    }
+
+    .nav-block li a {
+        text-decoration: none;
+    }
+
+    .nav-item {
+        display: inline-block;
+        padding: 15px 25px;
+        cursor: pointer;
+    }
+
+    .nav-item:hover {
+        background-color: mat-color($multimedia-manager-frontend-primary, 200);
+    }
+
+    .selected {
+        background-color: mat-color($multimedia-manager-frontend-primary, 800);
+    }
+
+    .spacer-1 {
+        flex: 1 1 auto;
+    }
+
+    .spacer-2 {
+        flex: 2 1 auto;
+    }
+
+    .avatar {
+        vertical-align: middle;
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
     }
 }
