init video list layout

--- a/src/app/core/nav-header/nav-header.component.html
+++ b/src/app/core/nav-header/nav-header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color='accent' color="primary">
+<mat-toolbar color='accent' style="height: 6%;" color="primary">
     <span class="nav-logo"><img src="assets/images/logo.png"></span>
     <span class="spacer-1"></span>
     <span class="nav-search">
@@ -9,10 +9,10 @@
     <span>
         <nav class="nav-block">
             <ul>
-                <li class="nav-item selected">Dashboard</li>
-                <li class="nav-item">Videos</li>
-                <li class="nav-item">Images</li>
-                <li class="nav-item">Books</li>
+                <li class="nav-item" routerLink="/home" routerLinkActive="selected">Dashboard</li>
+                <li class="nav-item" routerLink="/videos" routerLinkActive="selected">Videos</li>
+                <li class="nav-item" routerLink="/images" routerLinkActive="selected">Images</li>
+                <li class="nav-item" routerLink="/books" routerLinkActive="selected">Books</li>
             </ul>
         </nav>
     </span>
