--- a/src/app/videos/video-list/video-list.component.html
+++ b/src/app/videos/video-list/video-list.component.html
@@ -1,1 +1,4 @@
-<p>video-list works!</p>
+<div class="videos-container">
+    <div class="controller">controller</div>
+    <div class="video-list">videos</div>
+</div>
