--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,9 @@
 .background {
   background-color: aquamarine;
   width: auto;
-  height: 100%;
+  height: 93.7%;
   padding: 1px;
+  overflow: hidden;
 }
 
 .container {
