--- a/src/app/videos/video-list/video-list.component.html
+++ b/src/app/videos/video-list/video-list.component.html
@@ -1,4 +1,23 @@
 <div class="videos-container">
-    <div class="controller">controller</div>
-    <div class="video-list">videos</div>
+    <div class="controller">
+        <div class="side-bar">controller</div>
+    </div>
+    <div class="video-list">
+        <mat-card class="video-card">
+            <img mat-card-image src="assets/images/150.png" alt="Photo of a Shiba Inu">
+            <p>video</p>
+        </mat-card>
+        <mat-card class="video-card">
+            <img mat-card-image src="assets/images/150.png" alt="Photo of a Shiba Inu">
+            <p>video</p>
+        </mat-card>
+        <mat-card class="video-card">
+            <img mat-card-image src="assets/images/150.png" alt="Photo of a Shiba Inu">
+            <p>video</p>
+        </mat-card>
+        <mat-card class="video-card">
+            <img mat-card-image src="assets/images/150.png" alt="Photo of a Shiba Inu">
+            <p>video</p>
+        </mat-card>
+    </div>
 </div>
