add aside control and demo content

--- a/src/app/videos/video-list/video-list.component.html
+++ b/src/app/videos/video-list/video-list.component.html
@@ -1,6 +1,19 @@
 <div class="videos-container">
     <div class="controller">
-        <div class="side-bar">controller</div>
+        <div class="side-bar">
+            <strong>Sorted By</strong>
+            <ul>
+                <li>updated time</li>
+                <li>file size</li>
+                <li>scan times</li>
+            </ul>
+            <strong>history</strong>
+            <ul>
+                <li>video-1</li>
+                <li>video-1</li>
+                <li>video-1</li>
+            </ul>
+        </div>
     </div>
     <div class="video-list">
 
